aux_source_directory(. SRC_LIST)
aux_source_directory(./Chapter9 SRC_CHAP_LIST)
aux_source_directory(./Chapter10 SRC_CHAP_LIST102)
aux_source_directory(./Chapter11 SRC_CHAR_LIST111)
aux_source_directory(./Chapter12 SRC_CHAR_LIST12)
aux_source_directory(./Chapter13 SRC_CHAR_LIST13)
aux_source_directory(./Chapter14 SRC_CHAR_LIST14)
aux_source_directory(./Chapter15 SRC_CHAR_LIST15)
aux_source_directory(./Chapter16 SRC_CHAR_LIST16)
add_executable(Cpp_CourseUbuntu ${SRC_LIST} ${SRC_CHAP_LIST} ${SRC_CHAP_LIST102} ${SRC_CHAR_LIST111} ${SRC_CHAR_LIST12} ${SRC_CHAR_LIST13} ${SRC_CHAR_LIST14} ${SRC_CHAR_LIST15} ${SRC_CHAR_LIST16}) 